--- a/src/main/resources/com/flacis/cc/converter-view.fxml
+++ b/src/main/resources/com/flacis/cc/converter-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="313.0" prefWidth="587.0" style="-fx-background-color: #B1A296;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="313.0" prefWidth="587.0" style="-fx-background-color: #B1A296;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flacis.cc.Controller">
    <children>
       <AnchorPane prefHeight="94.0" prefWidth="587.0" style="-fx-background-color: #5D5C61;">
          <children>
