--- a/src/main/resources/com/flacis/cc/converter-view.fxml
+++ b/src/main/resources/com/flacis/cc/converter-view.fxml
@@ -18,8 +18,8 @@
             </Label>
          </children>
       </AnchorPane>
-      <ComboBox fx:id="from" editable="true" layoutX="30.0" layoutY="164.0" prefWidth="150.0" promptText="select currency" />
-      <ComboBox fx:id="in" editable="true" layoutX="30.0" layoutY="251.0" prefWidth="150.0" promptText="select currency" />
+      <ComboBox fx:id="from" layoutX="30.0" layoutY="164.0" prefWidth="150.0" promptText="select currency" />
+      <ComboBox fx:id="in" layoutX="30.0" layoutY="251.0" prefWidth="150.0" promptText="select currency" />
       <TextField fx:id="amount" layoutX="404.0" layoutY="164.0" promptText="enter quantity" />
       <TextField fx:id="result" layoutX="404.0" layoutY="251.0" promptText="get the result" />
       <Label layoutX="124.0" layoutY="132.0" text="From" textFill="#5d5c61">
