--- a/src/main/resources/com/flacis/cc/converter-view.fxml
+++ b/src/main/resources/com/flacis/cc/converter-view.fxml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="313.0" prefWidth="587.0" style="-fx-background-color: #B1A296;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flacis.cc.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="313.0" prefWidth="587.0" style="-fx-background-color: #B1A296;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.flacis.cc.Controller">
    <children>
       <AnchorPane prefHeight="94.0" prefWidth="587.0" style="-fx-background-color: #5D5C61;">
          <children>
-            <Label layoutX="14.0" layoutY="14.0" text="Cyrenncy Converter" textFill="#b1a296">
+            <Label layoutX="30.0" layoutY="3.0" prefHeight="89.0" prefWidth="526.0" stylesheets="@style.css" text="Curenncy Converter" textFill="#b1a296">
                <font>
-                  <Font name="Copperplate Gothic Bold" size="46.0" />
+                  <Font size="50.0" />
                </font>
             </Label>
          </children>
@@ -22,29 +19,29 @@
       <ComboBox fx:id="in" layoutX="30.0" layoutY="251.0" prefWidth="150.0" promptText="select currency" />
       <TextField fx:id="amount" layoutX="404.0" layoutY="164.0" promptText="enter quantity" />
       <TextField fx:id="result" layoutX="404.0" layoutY="251.0" promptText="get the result" />
-      <Label layoutX="124.0" layoutY="132.0" text="From" textFill="#5d5c61">
+      <Label layoutX="111.0" layoutY="128.0" stylesheets="@styleLabel.css" text="From" textFill="#5d5c61">
+         <font>
+            <Font size="34.0" />
+         </font>
+      </Label>
+      <Label layoutX="149.0" layoutY="215.0" stylesheets="@styleLabel.css" text="In" textFill="#5d5c61">
          <font>
             <Font name="Copperplate Gothic Bold" size="19.0" />
          </font>
       </Label>
-      <Label layoutX="159.0" layoutY="219.0" text="In" textFill="#5d5c61">
+      <Label layoutX="405.0" layoutY="128.0" stylesheets="@styleLabel.css" text="Amount" textFill="#5d5c61">
          <font>
             <Font name="Copperplate Gothic Bold" size="19.0" />
          </font>
       </Label>
-      <Label layoutX="405.0" layoutY="132.0" text="Amount" textFill="#5d5c61">
+      <Label layoutX="405.0" layoutY="215.0" stylesheets="@styleLabel.css" text="Result" textFill="#5d5c61">
          <font>
             <Font name="Copperplate Gothic Bold" size="19.0" />
          </font>
       </Label>
-      <Label layoutX="405.0" layoutY="219.0" text="Result" textFill="#5d5c61">
+      <Button fx:id="convert" layoutX="206.0" layoutY="189.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="169.0" style="-fx-background-color: #5D5C61;" stylesheets="@styleLabel.css" text="Convert" textFill="#b1a296">
          <font>
-            <Font name="Copperplate Gothic Bold" size="19.0" />
-         </font>
-      </Label>
-      <Button fx:id="convert" layoutX="252.0" layoutY="189.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="83.0" style="-fx-background-color: #5D5C61;" text="Convert" textFill="#b1a296">
-         <font>
-            <Font name="Copperplate Gothic Bold" size="13.0" />
+            <Font size="30.0" />
          </font></Button>
    </children>
 </AnchorPane>
