--- a/src/main/resources/com/flacis/cc/converter-view.fxml
+++ b/src/main/resources/com/flacis/cc/converter-view.fxml
@@ -8,7 +8,7 @@
    <children>
       <AnchorPane prefHeight="94.0" prefWidth="587.0" style="-fx-background-color: #5D5C61;">
          <children>
-            <Label layoutX="30.0" layoutY="3.0" prefHeight="89.0" prefWidth="526.0" stylesheets="@style.css" text="Curenncy Converter" textFill="#b1a296">
+            <Label layoutX="30.0" layoutY="3.0" prefHeight="89.0" prefWidth="526.0" stylesheets="@style.css" text="Currency Converter" textFill="#b1a296">
                <font>
                   <Font size="50.0" />
                </font>
